# im

./: .gitignore  CMakeLists.txt  README.md  call_config.ini  main.cpp
include/ai/: AiCurlClient.h
include/widget/: AddFriendDialog.h  MainWindow.h
resources/: resources.qrc
src/ai/: AiCurlClient.cpp
src/app/: AppController.cpp  AppController.h  BusinessServices.cpp  BusinessServices.h  ChatMessageModel.cpp  ChatMessageModel.h  ContactListModel.cpp  ContactListModel.h  NoticeModel.cpp  NoticeModel.h
src/audio/: AudioManager.cpp  AudioManager.h
src/core/: AppLog.cpp  AppLog.h  CallConfig.cpp  CallConfig.h  ToxCoreWrapper.cpp  ToxCoreWrapper.h
src/persistence/: SqliteStorage.cpp  SqliteStorage.h
src/qml/: CMakeLists.txt  LoginPage.qml  Main.qml  MainWindow.qml
src/qml/components/: ChatBubble.qml  ChatPane.qml  ContactDelegate.qml  ContactPane.qml  ContactPane.qml.autosave  MessageComposer.qml  NoticeCenter.qml  TopBar.qml
src/qml/dialogs/: AddFriendDialog.qml  CallWindow.qml  ChangePasswordDialog.qml  ClearAssistantHistoryDialog.qml  DeleteFriendDialog.qml  EditFriendRemarkDialog.qml  IncomingFriendRequestDialog.qml  SetStatusMessageDialog.qml  SetStatusMessageDialog.qml.autosave
src/qml/style/: Theme.qml
src/video/: VideoManager.cpp  VideoManager.h
src/widget/: AddFriendDialog.cpp  MainWindow.cpp  MainWindow.h
